workflow/deploy/tensorflow-serving/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tensorflow-serving
  labels:
    name: tensorflow-serving
