workflow/deploy/tensorflow-serving/kustomize/base/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorflow-serving
  namespace: jetson-tensorflow-serving
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tensorflow-serving
  template:
    metadata:
      name: tensorflow-serving
      labels:
        app: tensorflow-serving
    spec:
      hostname: tensorflow-serving
      containers:
        - name: tensorflow-serving
          image: max-one.local:5001/jetson/tensorflow-serving
          volumeMounts:
            - mountPath: /dev/nvhost-ctrl
              name: nvhost-ctrl
            - mountPath: /dev/nvhost-ctrl-gpu
              name: nvhost-ctrl-gpu
            - mountPath: /dev/nvhost-prof-gpu
              name: nvhost-prof-gpu
            - mountPath: /dev/nvmap
              name: nvmap
            - mountPath: /dev/nvhost-gpu
              name: nvhost-gpu
            - mountPath: /dev/nvhost-as-gpu
              name: nvhost-as-gpu
            - mountPath: /usr/lib/aarch64-linux-gnu/tegra
              name: drivers
          securityContext:
            privileged: true
          ports:
            - containerPort: 80
              name: webservice
            - containerPort: 8500
              name: grpc
            - containerPort: 8501
              name: rest
      volumes:
        - name: nvhost-ctrl
          hostPath:
            path: /dev/nvhost-ctrl
        - name: nvhost-ctrl-gpu
          hostPath:
            path: /dev/nvhost-ctrl-gpu
        - name: nvhost-prof-gpu
          hostPath:
            path: /dev/nvhost-prof-gpu
        - name: nvmap
          hostPath:
            path: /dev/nvmap
        - name: nvhost-gpu
          hostPath:
            path: /dev/nvhost-gpu
        - name: nvhost-as-gpu
          hostPath:
            path: /dev/nvhost-as-gpu
        - name: drivers
          hostPath:
            path: /usr/lib/aarch64-linux-gnu/tegra
      nodeSelector:
        jetson: "true"
