workflow/deploy/tensorflow-serving/kustomize/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: jetson-tensorflow-serving
  name: tensorflow-serving
  labels:
    app: tensorflow-serving
spec:
  ports:
  - port: 80
    targetPort: 80
    name: webservice
  - port: 8500
    targetPort: 8500
    name: grpc
  - port: 8501
    targetPort: 8501
    name: rest
  selector:
    app: tensorflow-serving
  type: LoadBalancer
  loadBalancerIP: 12.0.0.209
